[tool.poetry]
name = "location_extractor"
version = "1.0.0"
description = "Extract countries, regions and cities from text"
# TODO: add authors
authors = []
license = "MIT"
include = [
    "location_extractor/data/*.csv",
]
readme = "README.md"
repository = "https://github.com/MMatlacz/LocationExtractor"
# TODO: add classifiers
classifiers = [
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
numpy = "^1.19.5"
nltk = "^3.5"
jellyfish = "^0.8.2"
pycountry = "^20.7.3"
Unidecode = "^1.1.2"

[tool.poetry.dev-dependencies]
flake8-pytest-style = "^1.3.0"
ipython = "^7.19.0"
isort = "^4.3.21"
mypy = "^0.790"
pytest = "^6.2.1"
pytest-cov = "^2.10.1"
pytest-deadfixtures = "^2.2.1"
pytest-isort = "^1.2.0"
pytest-randomly = "^3.5.0"
safety = "^1.10.2"
wemake-python-styleguide = "^0.14.1"
wily = "^1.19.0"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
