[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "location_extractor"
version = "1.0.0"
description = "Extract countries, regions and cities from text"
# TODO(skarzi): add authors
authors = []
license = "MIT"
include = [
    "location_extractor/data/*.csv",
]
readme = "README.md"
repository = "https://github.com/MMatlacz/LocationExtractor"
# TODO(skarzi): add classifiers
classifiers = [
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"

Unidecode = "^1.2.0"
jellyfish = "^0.8.2"
nltk = "^3.5"
numpy = "^1.20.0"
pycountry = "^20.7.3"

[tool.poetry.dev-dependencies]
# tests
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-deadfixtures = "^2.2.1"
pytest-randomly = "^3.5.0"
pytest-timeout = "^1.4.2"

# linters
#python
flake8-pytest-style = "^1.3.0"
isort = "^4.3.21"
wemake-python-styleguide = "^0.14.1"
wily = "^1.19.0"
# other
safety = "^1.10.3"

# type hinting
mypy = "^0.812"

# local development
ipython = "^7.20.0"
